# Travelers-ECS-Benchmark

./: CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
include/TRA/ecs/: archetype.hpp  componentLibrary.hpp  signatureKey.hpp  tagLibrary.hpp  world.hpp
lib/: tra_ecs.lib
src/: main.cpp
